--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-<p id="notice"><%= notice %></p>
+<% if notice %><p id="notice"><%= notice %></p><% end %>
+<% if alert %><p id="notice"><%= alert %></p><% end %>
 
 <%= yield %>
 
